--- a/index.html
+++ b/index.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Smooth Scrolling thanks to https://github.com/cferdinandi/smooth-scroll -->
+<!-- Get minor updates and patch fixes within a major version -->
+<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script>
+<script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+</script>
+
+</head>
+
 <style>
 body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
+body, html {
+    height: 100%;
+}
+.mySlides {
+  display: none;
+}
+
+/* Full height image header */
+.bgimg-1 {
+  background-image: url('images/slideshow/welcome.jpg');
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  color: white;
+  background-blend-mode: multiply;
+  background-color: rgb(70,70,70); // Tint color
+}
+
 </style>
+
 <body>
 
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="sponsor.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SPONSOR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="/#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+
+    <a href="/#about" class="w3-bar-item w3-button w3-padding-large">ABOUT</a>
+    <a href="/#join" class="w3-bar-item w3-button w3-padding-large">JOIN</a>
+
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right" onclick="showContactModal()"><i class="fa fa-plane"></i> CONTACT</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -27,7 +59,6 @@ body {font-family: "Lato", sans-serif}
         <a href="#" class="w3-bar-item w3-button">Calendar</a>
       </div>
     </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
   </div>
 </div>
 
@@ -40,133 +71,133 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<header class="w3-content" style="max-width:2500px;margin-top:46px; height:100%;">
 
   <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
-    <img src="images/slideshow/welcome.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Cyber @ UCI</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>
+  <div class="mySlides w3-display-container bgimg-1 w3-center">
     </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="/w3images/chicago.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>
+      <div class="w3-display-middle w3-text-white" style="width:100%; text-align:center">
+      <span class="w3-jumbo">Cyber @ UCI</span>
+      <br>
+      <br>
+      <span class="w3-xlarge">We do all things Cybersecurity</span>
+      <p><a href="#about" class="w3-button w3-blue w3-text-white w3-padding-large w3-large w3-margin-top w3-transition-medium">
+          About Us
+      </a></p>
     </div>
+
   </div>
 
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+    <a href="https://www.facebook.com/zotbotics/"><i class="fab fa-facebook w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/zotboticsatuci/"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <a href="http://zotbotics.slack.com/signup"><i class="fab fa-slack w3-hover-opacity"></i></a>
+  </div>
+
+</header>
+
+
+  <!-- About Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="about">
     <h2 class="w3-wide">THE CLUB</h2>
     <p class="w3-opacity"><i>We do all things cybersecurity</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    <p class="w3-justify">
+      Cyber @ UCI was created from a desire to have more cybersecurity exposure and
+      learning at UCI. Despite being a rapidly growing, and extremely important field,
+      cybersecurity is often only relegated to a couple upper division classes. That
+      just isn't right! At its core, being 'good' at cybersecurity necessitates being
+      plugged into the security community, and keeping up to date with all the latest
+      developments. Cyber @ UCI offers such a place, bringing people from all levels
+      of experience together with one common interest: cybersecurity. Yet more than
+      just a common interest, we have several branches of involvement that we offer...
+
+    </p>
+
+    <div class="w3-row-padding" style="margin-top:64px; margin-bottom:64px">
+      <div class="w3-col l4 m4">
+        <img src="/images/workshops.jpg" style="width:100%" alt="Avatar">
+        <div class="w3-card w3-container w3-white w3-padding w3-round">
+          <p class="w3-xlarge">Workshops</p>
+          <p class="autoflow" autoflowid=0>
+            We highlight in-house talent, discuss major news events, or tackle common security topics in our weekly workshops.
+          </p>
+        </div>
       </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      <div class="w3-col l4 m4">
+        <img src="/images/ctf.png" style="width:100%" alt="Avatar">
+        <div class="w3-card w3-container w3-white w3-padding w3-round">
+          <p class="w3-xlarge">CTFs</p>
+          <p class="autoflow" autoflowid=0>
+            Want more hands on? Our CTF (or Capture the Flag) is a yearly event hosted with IEEE pitting teams of
+            students against each other to solve the security challenges and win the grand prize!
+          </p>
+        </div>
       </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+      <div class="w3-col l4 m4">
+        <img src="/images/ccdc.jpg" style="width:100%" alt="Avatar">
+        <div class="w3-card w3-container w3-white w3-padding w3-round">
+          <p class="w3-xlarge">CCDC</p>
+          <p class="autoflow" autoflowid=0>
+            CCDC (Collegiate Cyber Defense Competition) is a staple for any aspiring cybersecurity expert. As a team, we compete against
+            other universities in real time to defend and maintain a live network.
+          </p>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
+  <div class="w3-black" id="join">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+      <h2 class="w3-wide w3-center">JOIN US</h2>
+      <p class="w3-opacity w3-center"><i>Interested in Cybersecurity? We'd love to have you!</i></p><br>
 
-      <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-      </ul>
+      <p class="w3-justify">
+        People are always curious about what it takes to get into Cybersecurity, and the answer to that question is... just jump in!
+        Our club is structured in a way to encourage beginners to jump in and engage with our workshops, in house competitions, and
+        also our competition teams.
+        <br><br>
+        <h3 class="w3-center">
+        So how does one 'jump in?'
+      </h3>
+      </p>
 
-      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-      </div>
+      <table class="w3-container w3-content">
+          <tr>
+            <th style="padding:.5em;"><div class="w3-circle w3-white w3-text-black w3-xxxlarge w3-padding-16" style="width: 2em; height:2em;"> 1</div></th>
+            <th><span class="w3-xlarge">Speak</span><br> Join our <a href="/slack">Slack</a> and introduce yourself!</th>
+          </tr>
+          <tr>
+            <th style="padding:.5em;"><div class="w3-circle w3-white w3-text-black w3-xxxlarge w3-padding-16" style="width: 2em; height:2em;"> 2</div></th>
+            <th><span class="w3-xlarge">Listen</span><br>Sign up to our <a href="/newsletter">mailing list</a>. and join our <a href="/facebook">Facebook group.</a></th>
+          </tr>
+
+          <tr>
+            <th style="padding:.5em;"><div class="w3-circle w3-white w3-text-black w3-xxxlarge w3-padding-16" style="width: 2em; height:2em;"> 3</div></th>
+            <th><span class="w3-xlarge">Attend</span><br>You can join our <a href="/ccdc">CCDC Team</a>, head to <a href="/defcon">Defcon</a> with us,
+               or participate in our <a href="/ctf">CTF</a>. These involements are seasonal so make sure you sign up to our mailing list to hear about them.</th>
+          </tr>
+      </table>
     </div>
   </div>
 
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
+  <!-- Contact Modal -->
+  <div id="contactModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32">
-        <span onclick="document.getElementById('ticketModal').style.display='none'"
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
+      <header class="w3-container w3-blue w3-center w3-padding-32">
+        <span onclick="document.getElementById('contactModal').style.display='none'"
+       class="w3-button w3-blue w3-xlarge w3-display-topright">×</span>
+        <h2 class="w3-wide">Contact Cyber @ UCI</h2>
       </header>
       <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+        <form action="/contact.php" target="_blank">
+          <p><label><i class="fa fa-user"></i> Your Name</label></p>
+          <input class="w3-input w3-border" type="text" placeholder="Name" required name = "Name">
+          <p><label><i class="fa fa-envelope"></i> Email</label></p>
+          <input class="w3-input w3-border" type="email" placeholder="Enter email" required name = "Email">
+          <p><label><i class="fa fa-comments"></i> Your Message</label></p>
+          <textarea class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></textarea>
+          <button class="w3-button w3-block w3-blue w3-padding-16 w3-section w3-right" type="submit">SEND</button>
         </form>
       </div>
     </div>
@@ -174,38 +205,11 @@ body {font-family: "Lato", sans-serif}
 
 <!-- End Page Content -->
 </div>
-<!-- Add Google Maps -->
-<div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
-<script>
-function myMap() {
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
-
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="/facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="/slack"><i class="fa fa-slack w3-hover-opacity"></i></a>
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
@@ -237,12 +241,25 @@ function myFunction() {
 }
 
 // When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
+var modal = document.getElementById('contactModal');
 window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
   }
 }
+
+function showContactModal(){
+  modal.style.display = "block";
+}
+function hideContactModal(){
+  modal.style.display = "none";
+}
+</script>
+
+<!--Autoflow the needed divs-->
+<script src="/assets/js/autoflow.js"></script>
+<script>
+  autoflow();
 </script>
 
 </body>
