--- a/common/navbar.html
+++ b/common/navbar.html
@@ -12,9 +12,9 @@
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Past Meetings</a>
-        <a href="board.html" class="w3-bar-item w3-button">Board</a>
+        <a href="/board.php" class="w3-bar-item w3-button">Board</a>
         <a href="/calendar.php" class="w3-bar-item w3-button">Calendar</a>
+        <a href="/newsletter.php" class="w3-bar-item w3-button">Newsletter</a>
       </div>
     </div>
   </div>
@@ -22,10 +22,10 @@
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+  <a href="/board.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BOARD</a>
+  <a href="/calendar.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CALENDAR</a>
+  <a href="/newsletter.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">NEWSLETTER</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction(); showContactModal();">CONTACT</a>
 </div>
 
 
