--- a/common/navbar.html
+++ b/common/navbar.html
@@ -4,9 +4,9 @@
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-
-    <a href="/#about" class="w3-bar-item w3-button w3-padding-large">ABOUT</a>
     <a href="/#join" class="w3-bar-item w3-button w3-padding-large">JOIN</a>
+    <a href="/ccdc.php" class="w3-bar-item w3-button w3-padding-large">CCDC</a>
+
 
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right" onclick="showContactModal()">  CONTACT</a>
     <div class="w3-dropdown-hover w3-hide-small">
