Added Privacy Policy

--- a/common/legal.html
+++ b/common/legal.html
@@ -1,1 +1,4 @@
-<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<p class="w3-medium">
+&#x24B8;	Cyber @ UCI | Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+</p>
+ <a href="https://www.iubenda.com/privacy-policy/20257280" class="iubenda-black iubenda-embed " title="Privacy Policy">Privacy Policy</a> <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
