--- a/common/navbar.html
+++ b/common/navbar.html
@@ -32,19 +32,23 @@
   <!-- Contact Modal -->
   <div id="contactModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
+
       <header class="w3-container w3-blue w3-center w3-padding-32">
         <span onclick="document.getElementById('contactModal').style.display='none'"
        class="w3-button w3-blue w3-xlarge w3-display-topright">×</span>
         <h2 class="w3-wide">Contact Cyber @ UCI</h2>
       </header>
       <div class="w3-container">
-        <form action="/contact.php" target="_blank">
+        <form action="/contact.php" method="post" target="print_popup"
+        onsubmit="window.open('about:blank','print_popup','width=500,height=200'); hideContactModal();"target="_blank">
           <p><label><i class="fa fa-user"></i> Your Name</label></p>
-          <input class="w3-input w3-border" type="text" placeholder="Name" required name = "Name">
+          <input class="w3-input w3-border" type="text" placeholder="Name" required name = "name">
           <p><label><i class="fa fa-envelope"></i> Email</label></p>
-          <input class="w3-input w3-border" type="email" placeholder="Enter email" required name = "Email">
-          <p><label><i class="fa fa-comments"></i> Your Message</label></p>
-          <textarea class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></textarea>
+          <input class="w3-input w3-border" type="text" placeholder="Email" required name = "email">
+          <p><label><i class="fa fa-comments"></i> Subject</label></p>
+          <input class="w3-input w3-border" type="text" placeholder="Subject" required name = "subject">
+          <p><label><i class="fa fa-bars"></i> Your Message</label></p>
+          <textarea class="w3-input w3-border" type="text" placeholder="Message" required name="message"></textarea>
           <button class="w3-button w3-block w3-blue w3-padding-16 w3-section w3-right" type="submit">SEND</button>
         </form>
       </div>
@@ -66,5 +70,8 @@ function showContactModal(){
 }
 function hideContactModal(){
   modal.style.display = "none";
+}
+function sendEmail(){
+
 }
 </script>
