Removed subject line from contact form

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -45,10 +45,8 @@
           <input class="w3-input w3-border" type="text" placeholder="Name" required name = "name">
           <p><label><i class="fa fa-envelope"></i> Email</label></p>
           <input class="w3-input w3-border" type="text" placeholder="Email" required name = "email">
-          <p><label><i class="fa fa-comments"></i> Subject</label></p>
-          <input class="w3-input w3-border" type="text" placeholder="Subject" required name = "subject">
-          <p><label><i class="fa fa-bars"></i> Your Message</label></p>
-          <textarea class="w3-input w3-border" type="text" placeholder="Message" required name="message"></textarea>
+          <p><label><i class="fa fa-comments"></i> Your Message</label></p>
+          <textarea rows="4" class="w3-input w3-border" type="text" placeholder="Message" required name="message"></textarea>
           <button class="w3-button w3-block w3-blue w3-padding-16 w3-section w3-right" type="submit">SEND</button>
         </form>
       </div>
