--- a/common/navbar.html
+++ b/common/navbar.html
@@ -55,6 +55,18 @@
 
 <script>
 
+
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+
+
 // When the user clicks anywhere outside of the modal, close it
 var modal = document.getElementById('contactModal');
 window.onclick = function(event) {
