Fixed typo in contact form

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -43,7 +43,7 @@
         onsubmit="window.open('about:blank','print_popup','width=500,height=200'); hideContactModal();"target="_blank">
           <p><label><i class="fa fa-user"></i> Your Name</label></p>
           <input class="w3-input w3-border" type="text" placeholder="Name" required name = "name">
-          <p><label><i class="fa fa-envelope"></i> Email</label></p>
+          <p><label><i class="fa fa-envelope"></i> Your Email</label></p>
           <input class="w3-input w3-border" type="text" placeholder="Email" required name = "email">
           <p><label><i class="fa fa-comments"></i> Your Message</label></p>
           <textarea rows="4" class="w3-input w3-border" type="text" placeholder="Message" required name="message"></textarea>
