--- a/common/navbar.html
+++ b/common/navbar.html
@@ -31,7 +31,7 @@
 
   <!-- Contact Modal -->
   <div id="contactModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
+    <div class="w3-modal-content w3-animate-top w3-card-4 w3-text-black">
 
       <header class="w3-container w3-blue w3-center w3-padding-32">
         <span onclick="document.getElementById('contactModal').style.display='none'"
