added link to mailing list

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ sitemap:
                         <h3>Listen</h3>
                       </th>
                       <td>
-                        Sign up to our <a href="/newsletter">mailing list</a>. and join our <a href="https://www.facebook.com/groups/cyberuci">Facebook group.</a>
+                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>. and join our <a href="https://www.facebook.com/groups/cyberuci">Facebook group.</a>
                       </td>
                     </tr>
 
