My Updates to the Website

--- a/index.html
+++ b/index.html
@@ -69,27 +69,29 @@ sitemap:
                 <hr />
 
                 <table>
-            			<tbody>
-            				<tr>
-            					<td><span class="image fit"><img src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
-            					<td><span class="image fit"><img src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
-                      <td><span class="image fit"><img src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
-            				</tr>
+            			
+
+            					<div><img src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" style="width: auto;"/></div></td>
+            					<div><img src="{{ "/images/CCDC_team.png" | absolute_url }}" alt="" style="width: auto;" /></div></td>
+                      <div><img src="{{ "/images/ctf.png" | absolute_url }}" alt="" style="width: auto;" /></div></td>
+                    </div>
+                    <tbody>
             				<tr>
             					<td>
                         <h2>Workshops</h2>
                         We highlight in-house talent, discuss major news events, or tackle common security topics in our weekly workshops.
-                        Stay tuned on Facebook for upcoming workshops and topics.
                       </td>
             					<td>
                         <h2>CCDC</h2>
-                          CCDC (Collegiate Cyber Defense Competition) is a staple for any aspiring cybersecurity expert. As a team, we compete against
+                          CCDC (Collegiate Cyber 
+                          Defense Competition) is a staple
+                          for any aspiring cybersecurity expert.
+                          As a team, we compete against
                           other universities in real time to defend and maintain a live network.
                       </td>
             					<td>
                         <h2>CTFs</h2>
-                          Want more hands on? Our CTF (or Capture the Flag) is a yearly event hosted with IEEE pitting teams of
-                          students against each other to solve the security challenges and win the grand prize!
+                          Our CTFs (or Capture the Flag) are events hosted by competing student teams to solve the security challenges and win the awards!
                       </td>
             				</tr>
 
@@ -119,7 +121,7 @@ sitemap:
                         <h3>Speak</h3>
                       </th>
                       <td>
-                        Join our <a href="https://ucicyber.slack.com">Slack</a> and introduce yourself!
+                        Join our <a href="https://discordapp.com/channels/@me/725425841864966204/751976863491948575">Discord</a> and introduce yourself!
                       </td>
                     </tr>
                     <tr>
@@ -128,7 +130,7 @@ sitemap:
                         <h3>Listen</h3>
                       </th>
                       <td>
-                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>. and join our <a href="https://www.facebook.com/groups/cyberuci">Facebook group.</a>
+                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>.
                       </td>
                     </tr>
 
@@ -137,7 +139,8 @@ sitemap:
                         <h3>Attend</h3>
                       </th>
                       <td>
-                        You can join our <a href="/ccdc">CCDC Team</a>, head to <a href="https://www.defcon.org/">Defcon</a> with us,
+                        <!-- Hiding /ccdc <a href="#">CCDC Team</a> as requested-->
+                        You can join our CCDC Team, head to <a href="https://www.defcon.org/">Defcon</a> with us,
                          or participate in our CTF. These involements are seasonal so make sure you sign up to our mailing list to hear about them.
                       </td>
                     </tr>
