Updates for the 2020 school year

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home | Cyber @ UCI
 description: Home of Cyber @ UCI
 sitemap:
     priority: 1.0
-    lastmod: 2019-09-01
+    lastmod: 2020-09-27
     changefreq: weekly
 ---
 <!DOCTYPE HTML>
@@ -71,15 +71,15 @@ sitemap:
                 <table>
             			<tbody>
             				<tr>
-            					<td><span class="image fit"><img src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
-            					<td><span class="image fit"><img src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
-                      <td><span class="image fit"><img src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
+            					<td><span class="image"><img src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
+            					<td><span class="image"><img src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
+                      <td><span class="image"><img src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
             				</tr>
             				<tr>
             					<td>
                         <h2>Workshops</h2>
                         We highlight in-house talent, discuss major news events, or tackle common security topics in our weekly workshops.
-                        Stay tuned on Facebook for upcoming workshops and topics.
+                        Stay tuned on Discord for upcoming workshops and topics.
                       </td>
             					<td>
                         <h2>CCDC</h2>
@@ -88,8 +88,8 @@ sitemap:
                       </td>
             					<td>
                         <h2>CTFs</h2>
-                          Want more hands on? Our CTF (or Capture the Flag) is a yearly event hosted with IEEE pitting teams of
-                          students against each other to solve the security challenges and win the grand prize!
+                          Want more hands on? Check back soon for news on our Capture The Flag (CTF) competition, where teams of
+                          students compete to solve the security challenges and win the grand prize!
                       </td>
             				</tr>
 
@@ -119,7 +119,7 @@ sitemap:
                         <h3>Speak</h3>
                       </th>
                       <td>
-                        Join our <a href="https://ucicyber.slack.com">Slack</a> and introduce yourself!
+                        Join our <a href="https://discord.gg/kSpR9uv">Discord</a> and introduce yourself!
                       </td>
                     </tr>
                     <tr>
@@ -128,7 +128,7 @@ sitemap:
                         <h3>Listen</h3>
                       </th>
                       <td>
-                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>. and join our <a href="https://www.facebook.com/groups/cyberuci">Facebook group.</a>
+                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>.
                       </td>
                     </tr>
 
