--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ sitemap:
             <h1>{{site.title}}</h1>
 						<h2>We do all things Cybersecurity</h2>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button fas solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
