--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ sitemap:
                 <table>
             			<tbody>
             				<tr>
-            					<td><span class="image"><img src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
-            					<td><span class="image"><img src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
-                      <td><span class="image"><img src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
+            					<td><span class="image"><img style="max-width: 100%" src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
+            					<td><span class="image"><img style="max-width: 100%" src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
+                      <td><span class="image"><img style="max-width: 100%" src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
             				</tr>
             				<tr>
             					<td>
