--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@ sitemap:
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-    <meta http-equiv="refresh" content="0; url=https://cyberuci.com/" />
+    <!-- <meta http-equiv="refresh" content="0; url=https://cyberuci.com/" /> -->
 	<head>
     {% include head.html %}
 
 
 	</head>
 	<body class="is-loading">
+
+      <div class="redirectAlert">
+        <b>This website is deprecated. If you are not automatically redirected, please click <a href="https://cyberuci.com">here to see the new website</a></b>
+      </div>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
