--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ sitemap:
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-    <!-- <meta http-equiv="refresh" content="0; url=https://cyberuci.com/" /> -->
+    <meta http-equiv="refresh" content="0; url=https://cyberuci.com/" />
 	<head>
     {% include head.html %}
 
