added new index file just for redirection. old index file renamed to deprecated_index.html

--- a/index.html
+++ b/index.html
@@ -1,205 +1,15 @@
----
-layout: null
-title: Home | Cyber @ UCI
-description: Home of Cyber @ UCI
-sitemap:
-    priority: 1.0
-    lastmod: 2020-09-27
-    changefreq: weekly
----
-<!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-  Jekyll integration by somiibo.com
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
+<head>
+    <title>Cyber@UCI</title>
     <meta http-equiv="refresh" content="0; url=https://cyberuci.com/" />
-	<head>
-    {% include head.html %}
-
-
-	</head>
-	<body class="is-loading">
-
-      <div class="redirectAlert">
-        <b>This website is deprecated. If you are not automatically redirected, please click <a href="https://cyberuci.com">here to see the new website</a></b>
-      </div>
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-          	<span class="image"><img width="250px" height="250px" src="{{ "/images/logo.png" | absolute_url }}" alt=""/></span>
-            <h1>{{site.title}}</h1>
-						<h2>We do all things Cybersecurity</h2>
-						<ul class="actions">
-							<li><a href="#header" class="button scrolly solo"><i class="fas fa-arrow-down"></i></a></li>
-						</ul>
-					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
-					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-
-            {% include nav.html %}
-
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>The Club</h2>
-									<p>What about us?</p>
-								</header>
-                <p>
-                  Cyber @ UCI was created from a desire to have more cybersecurity exposure and
-                  learning at UCI. Despite being a rapidly growing, and extremely important field,
-                  cybersecurity is often only relegated to a couple upper division classes. That
-                  just isn't right! At its core, being 'good' at cybersecurity necessitates being
-                  plugged into the security community, and keeping up to date with all the latest
-                  developments. Cyber @ UCI offers such a place, bringing people from all levels
-                  of experience together with one common interest: cybersecurity. Yet more than
-                  just a common interest, we have several branches of involvement that we offer...
-                </p>
-
-                <hr />
-
-                <table>
-            			<tbody>
-            				<tr>
-            					<td><span class="image"><img style="max-width: 100%" src="{{ "/images/workshops.jpg" | absolute_url }}" alt="" /></span></td>
-            					<td><span class="image"><img style="max-width: 100%" src="{{ "/images/ccdc.jpg" | absolute_url }}" alt="" /></span></td>
-                      <td><span class="image"><img style="max-width: 100%" src="{{ "/images/ctf.png" | absolute_url }}" alt="" /></span></td>
-            				</tr>
-            				<tr>
-            					<td>
-                        <h2>Workshops</h2>
-                        We highlight in-house talent, discuss major news events, or tackle common security topics in our weekly workshops.
-                        Stay tuned on Discord for upcoming workshops and topics.
-                      </td>
-            					<td>
-                        <h2>CCDC</h2>
-                          CCDC (Collegiate Cyber Defense Competition) is a staple for any aspiring cybersecurity expert. As a team, we compete against
-                          other universities in real time to defend and maintain a live network.
-                      </td>
-            					<td>
-                        <h2>CTFs</h2>
-                          Want more hands on? Check back soon for news on our Capture The Flag (CTF) competition, where teams of
-                          students compete to solve the security challenges and win the grand prize!
-                      </td>
-            				</tr>
-
-            			</tbody>
-            		</table>
-
-                <br><br>
-
-                <h2>JOIN US</h2>
-                <h3>Interested in Cybersecurity? We'd love to have you!</h3>
-
-                <br>
-
-                <p>
-                  People are always curious about what it takes to get into Cybersecurity, and the answer to that question is... just jump in!
-                  Our club is structured in a way to encourage beginners to jump in and engage with our workshops, in house competitions, and
-                  also our competition teams.
-                </p>
-
-                <h3 class="w3-center">
-                  So how does one 'jump in?'
-                </h3>
-
-                <table>
-                    <tr>
-                      <th>
-                        <h3>Speak</h3>
-                      </th>
-                      <td>
-                        Join our <a href="https://discord.gg/kSpR9uv">Discord</a> and introduce yourself!
-                      </td>
-                    </tr>
-                    <tr>
-
-                      <th>
-                        <h3>Listen</h3>
-                      </th>
-                      <td>
-                        Sign up to our <a href="https://eepurl.com/dH8Mj5">mailing list</a>.
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <th>
-                        <h3>Attend</h3>
-                      </th>
-                      <td>
-                        You can join our <a href="/ccdc">CCDC Team</a>, head to <a href="https://www.defcon.org/">Defcon</a> with us,
-                         or participate in our CTF. These involements are seasonal so make sure you sign up to our mailing list to hear about them.
-                      </td>
-                    </tr>
-                </table>
-
-                <hr />
-                <br><br>
-
-                <h2>Right Now</h2>
-                <h3>Check out our blog below to see what's up</h3>
-
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-                {% for post in site.posts limit:3 %}
-                {% assign mod3 = forloop.index | modulo: 3 %}
-  								<article>
-  									<header>
-  										<span class="date">{{ post.date | date_to_string }}</span>
-  										<h2><a href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
-  									</header>
-  									<a href="{{ post.url | absolute_url }}" class="image fit"><img src="{{ post.image | absolute_url }}" alt="" /></a>
-  									<p>{{ post.excerpt }}</p>
-  									<ul class="actions">
-  										<li><a href="{{ post.url | absolute_url }}" class="button">Full Story</a></li>
-  									</ul>
-  								</article>
-                  {% if mod3 == 0 %}
-                  <article>
-  									<header>
-  										<h2><a href="/blog">Read More...</a></h2>
-  									</header>
-
-  								</article>
-                  {% endif %}
-                {% endfor %}
-
-							</section>
-
-						<!-- Footer -->
-							<footer>
-                <ul class="actions">
-                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
-                </ul>
-							</footer>
-
-					</div>
-
-				<!-- Footer -->
-        {% include foot.html %}
-
-			</div>
-
-		<!-- Scripts -->
-		{% include scripts-main.html %}
-    {% include tracking.html %}
-
-	</body>
+    <link rel="stylesheet" href="new.css">
+</head>
+<body>
+    <div style="text-align: center;">
+        <div class="alert">
+        This website is <b>deprecated.</b> If you are not automatically redirected, <b>please click <a href="https://cyberuci.com">here to see our new website!</a></b>
+        </div>
+    </div>
+</body>
 </html>
